tests/baselines/reference/interfaceInGenericFunctionOuterParameterVarianceMeasurement.errors.txt
tests/cases/compiler/interfaceInGenericFunctionOuterParameterVarianceMeasurement.ts(14,5): error TS2322: Type 'f<TSub>.A<TSub>' is not assignable to type 'f<T>.A<T>'.
  Type 'T' is not assignable to type 'TSub'.
    'TSub' could be instantiated with an arbitrary type which could be unrelated to 'T'.
tests/cases/compiler/interfaceInGenericFunctionOuterParameterVarianceMeasurement.ts(15,5): error TS2322: Type 'f<T>.A<T>' is not assignable to type 'f<TSub>.A<TSub>'.
  Type 'T' is not assignable to type 'TSub'.
    'TSub' could be instantiated with an arbitrary type which could be unrelated to 'T'.


==== tests/cases/compiler/interfaceInGenericFunctionOuterParameterVarianceMeasurement.ts (2 errors) ====
    function f<T>() {
        interface A<U> {
            co: U;
            contra: (x: T) => unknown;
        }
    
        return (null as any as A<T>);
    }
    
    function g<T, TSub extends T>() {
        let a = f<T>();
        let b = f<TSub>();
    
        a = b;
        ~
!!! error TS2322: Type 'f<TSub>.A<TSub>' is not assignable to type 'f<T>.A<T>'.
!!! error TS2322:   Type 'T' is not assignable to type 'TSub'.
!!! error TS2322:     'TSub' could be instantiated with an arbitrary type which could be unrelated to 'T'.
        b = a;
        ~
!!! error TS2322: Type 'f<T>.A<T>' is not assignable to type 'f<TSub>.A<TSub>'.
!!! error TS2322:   Type 'T' is not assignable to type 'TSub'.
!!! error TS2322:     'TSub' could be instantiated with an arbitrary type which could be unrelated to 'T'.
    }